--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,56 +3,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "461a256d",
+   "id": "1fe0c8ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import tkinter as tk\n",
-    "from tkinter import filedialog, messagebox, ttk, simpledialog\n",
+    "from tkinter import filedialog, messagebox, ttk\n",
     "import os\n",
     "\n",
     "# -----------------------------\n",
     "# Recursive slicing function\n",
     "# -----------------------------\n",
     "def get_hierarchy_slice(df, manager_id):\n",
-    "    \"\"\"Return all employees (direct/indirect) under manager_id in order.\"\"\"\n",
+    "    \"\"\"Return all employees (direct/indirect) under manager_id in order.\n",
+    "       Manager's own record is NOT included.\n",
+    "    \"\"\"\n",
     "    result = []\n",
     "    visited = set()\n",
     "\n",
+    "    # ensure manager_id is string for comparison\n",
+    "    mid_str = str(manager_id).strip()\n",
+    "\n",
     "    def recurse(mid):\n",
-    "        reports = df[df['Entity Manager Employee ID'] == mid]\n",
+    "        # use string comparisons to be robust\n",
+    "        reports = df[df['Entity Manager Employee ID'].astype(str).str.strip() == str(mid).strip()]\n",
     "        for _, r in reports.iterrows():\n",
-    "            eid = str(r['Employee ID'])\n",
+    "            eid = str(r['Employee ID']).strip()\n",
     "            if eid not in visited:\n",
     "                visited.add(eid)\n",
+    "                # append as dict for consistent dataframe creation later\n",
     "                result.append(r.to_dict())\n",
     "                recurse(eid)\n",
     "\n",
-    "    recurse(str(manager_id))\n",
+    "    recurse(mid_str)\n",
     "    return pd.DataFrame(result)\n",
     "\n",
-    "# -----------------------------\n",
-    "# Summary builder\n",
-    "# -----------------------------\n",
-    "def generate_summary(sliced_df, manager_name, manager_id):\n",
-    "    summary = []\n",
-    "    total_emp = len(sliced_df)\n",
-    "\n",
-    "    summary.append({\"Metric\": \"Manager Name\", \"Value\": manager_name})\n",
-    "    summary.append({\"Metric\": \"Manager ID\", \"Value\": manager_id})\n",
-    "    summary.append({\"Metric\": \"Total Employees (direct+indirect)\", \"Value\": total_emp})\n",
-    "\n",
-    "    total_gcb3 = sliced_df[sliced_df['Global Career Band'] == 3]['Employee ID'].nunique()\n",
-    "    total_gcb4 = sliced_df[sliced_df['Global Career Band'] == 4]['Employee ID'].nunique()\n",
-    "\n",
-    "    summary.append({\"Metric\": \"Total GCB3 reporting\", \"Value\": total_gcb3})\n",
-    "    summary.append({\"Metric\": \"Total GCB4 reporting\", \"Value\": total_gcb4})\n",
-    "\n",
-    "    per_gcb3 = sliced_df[sliced_df['Global Career Band'] == 3].groupby('Employee Name')['Employee ID'].count().reset_index(name='Count')\n",
-    "    per_gcb4 = sliced_df[sliced_df['Global Career Band'] == 4].groupby('Employee Name')['Employee ID'].count().reset_index(name='Count')\n",
-    "\n",
-    "    return summary, per_gcb3, per_gcb4\n",
     "\n",
     "# -----------------------------\n",
     "# GUI Application\n",
@@ -64,6 +50,7 @@
     "        master.geometry(\"700x400\")\n",
     "\n",
     "        self.df = None\n",
+    "        self.name_to_ids = {}\n",
     "        self.output_folder = \"\"\n",
     "\n",
     "        # ---------------- Input File ----------------\n",
@@ -80,7 +67,7 @@
     "\n",
     "        # ---------------- Manager Selection ----------------\n",
     "        tk.Label(master, text=\"Select Manager Name:\").grid(row=2, column=0, sticky=\"w\", padx=10, pady=5)\n",
-    "        self.manager_cb = ttk.Combobox(master, width=47)   # combo, editable\n",
+    "        self.manager_cb = ttk.Combobox(master, width=47, state=\"readonly\")   # kept as readonly (old behaviour)\n",
     "        self.manager_cb.grid(row=2, column=1, padx=5)\n",
     "        tk.Button(master, text=\"Load Managers\", command=self.load_managers).grid(row=2, column=2, padx=5)\n",
     "\n",
@@ -92,6 +79,11 @@
     "        # ---------------- Buttons ----------------\n",
     "        tk.Button(master, text=\"Generate Slice for Selected Manager\", command=self.slice_selected_manager).grid(row=4, column=0, columnspan=2, pady=10)\n",
     "        tk.Button(master, text=\"Generate Slices for All at GCB Level\", command=self.slice_all_at_level).grid(row=5, column=0, columnspan=2, pady=10)\n",
+    "\n",
+    "        # ---------------- Status ----------------\n",
+    "        self.status_var = tk.StringVar()\n",
+    "        tk.Label(master, textvariable=self.status_var, fg=\"blue\").grid(row=6, column=0, columnspan=3, pady=10)\n",
+    "\n",
     "\n",
     "    # ---------------- Browse Functions ----------------\n",
     "    def browse_input_file(self):\n",
@@ -111,43 +103,114 @@
     "        if not file or not os.path.exists(file):\n",
     "            messagebox.showerror(\"Error\", \"Please select a valid Hierarchy Report file\")\n",
     "            return\n",
+    "\n",
+    "        # read and normalize\n",
     "        self.df = pd.read_excel(file, sheet_name=\"Hierarchy Report\")\n",
     "        self.df.columns = self.df.columns.str.strip()\n",
     "\n",
-    "        # Only employees who appear as managers\n",
-    "        manager_ids = self.df['Entity Manager Employee ID'].dropna().unique()\n",
-    "        managers_df = self.df[self.df['Employee ID'].isin(manager_ids)][['Employee Name','Employee ID']].drop_duplicates()\n",
-    "        managers_df['Display'] = managers_df['Employee Name'] + \" | \" + managers_df['Employee ID'].astype(str)\n",
-    "        self.manager_cb['values'] = managers_df['Display'].tolist()\n",
-    "        messagebox.showinfo(\"Loaded\", f\"Loaded {len(managers_df)} managers.\")\n",
+    "        # normalize ID columns to strings (prevents numeric/string mismatches)\n",
+    "        if 'Employee ID' in self.df.columns:\n",
+    "            self.df['Employee ID'] = self.df['Employee ID'].astype(str).str.strip()\n",
+    "        if 'Entity Manager Employee ID' in self.df.columns:\n",
+    "            self.df['Entity Manager Employee ID'] = self.df['Entity Manager Employee ID'].astype(str).str.strip()\n",
+    "        if 'Global Career Band' in self.df.columns:\n",
+    "            # keep as-is; will coerce to numeric when counting\n",
+    "            self.df['Global Career Band'] = self.df['Global Career Band'].astype(str).str.strip()\n",
+    "\n",
+    "        # Create a map: Name -> list of IDs (preserve original behaviour you prefer)\n",
+    "        # keep unique IDs in order\n",
+    "        name_to_ids = self.df.groupby('Employee Name')['Employee ID'].apply(lambda s: list(dict.fromkeys(s))).to_dict()\n",
+    "        self.name_to_ids = name_to_ids\n",
+    "        self.manager_cb['values'] = list(name_to_ids.keys())\n",
+    "        self.status_var.set(f\"Loaded {len(name_to_ids)} names.\")\n",
     "\n",
     "    # ---------------- Slice Selected Manager ----------------\n",
     "    def slice_selected_manager(self):\n",
-    "        if self.df is None:\n",
-    "            messagebox.showerror(\"Error\", \"Load Hierarchy Report first!\")\n",
+    "        name = self.manager_cb.get()\n",
+    "        out_folder = self.output_folder_var.get()\n",
+    "        if not name:\n",
+    "            messagebox.showerror(\"Error\", \"Please select a manager name\")\n",
     "            return\n",
-    "        if not self.output_folder:\n",
-    "            messagebox.showerror(\"Error\", \"Select output folder!\")\n",
-    "            return\n",
-    "\n",
-    "        selected = self.manager_cb.get()\n",
-    "        if not selected or \"|\" not in selected:\n",
-    "            messagebox.showerror(\"Error\", \"Please select a valid manager from the list\")\n",
+    "        if not out_folder:\n",
+    "            messagebox.showerror(\"Error\", \"Please select output folder\")\n",
     "            return\n",
     "\n",
-    "        manager_name, manager_id = selected.split(\" | \")\n",
-    "        manager_id = manager_id.strip()\n",
+    "        ids = self.name_to_ids.get(name, [])\n",
+    "        if len(ids) > 1:\n",
+    "            # If multiple IDs for same name, ask user to select one\n",
+    "            id_select_win = tk.Toplevel(self.master)\n",
+    "            id_select_win.title(f\"Select Manager ID for {name}\")\n",
+    "            tk.Label(id_select_win, text=f\"Select Manager ID for {name}:\").pack(pady=5)\n",
+    "            selected_id_var = tk.StringVar()\n",
+    "            cb = ttk.Combobox(id_select_win, values=ids, textvariable=selected_id_var, state=\"readonly\")\n",
+    "            cb.pack(pady=5)\n",
+    "            def confirm_id():\n",
+    "                manager_id = selected_id_var.get()\n",
+    "                if manager_id:\n",
+    "                    self.generate_slice(manager_id, name, out_folder)\n",
+    "                    id_select_win.destroy()\n",
+    "            tk.Button(id_select_win, text=\"Confirm\", command=confirm_id).pack(pady=5)\n",
+    "            return\n",
+    "        elif len(ids) == 0:\n",
+    "            messagebox.showerror(\"Error\", f\"No manager ID found for {name}\")\n",
+    "            return\n",
+    "        else:\n",
+    "            manager_id = ids[0]\n",
+    "            self.generate_slice(manager_id, name, out_folder)\n",
     "\n",
+    "    # ---------------- Slice All at GCB Level ----------------\n",
+    "    def slice_all_at_level(self):\n",
+    "        level = self.gcb_level_cb.get()\n",
+    "        out_folder = self.output_folder_var.get()\n",
+    "        if not level:\n",
+    "            messagebox.showerror(\"Error\", \"Please select a GCB level\")\n",
+    "            return\n",
+    "        if not out_folder:\n",
+    "            messagebox.showerror(\"Error\", \"Please select output folder\")\n",
+    "            return\n",
+    "        level = int(level)\n",
+    "        # coerce Global Career Band to numeric then filter\n",
+    "        gcb_numeric = pd.to_numeric(self.df['Global Career Band'], errors='coerce')\n",
+    "        managers = self.df[gcb_numeric == level][['Employee ID','Employee Name']].drop_duplicates()\n",
+    "\n",
+    "        saved = 0\n",
+    "        for _, row in managers.iterrows():\n",
+    "            mid = str(row['Employee ID'])\n",
+    "            mname = row['Employee Name']\n",
+    "            sliced_df = get_hierarchy_slice(self.df, mid)\n",
+    "            # manager is not included by get_hierarchy_slice; keep as-is\n",
+    "            if sliced_df.empty:\n",
+    "                continue\n",
+    "            # summary counts (use nunique for proper unique counts)\n",
+    "            summary, per_gcb3, per_gcb4 = self.build_summary(sliced_df, mname, mid)\n",
+    "\n",
+    "            file_path = os.path.join(out_folder, f\"{mname}_{mid}_slice.xlsx\")\n",
+    "            with pd.ExcelWriter(file_path, engine=\"openpyxl\") as writer:\n",
+    "                sliced_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Slice\")\n",
+    "                pd.DataFrame(summary).to_excel(writer, index=False, sheet_name=\"Summary\")\n",
+    "                if not per_gcb3.empty:\n",
+    "                    per_gcb3.to_excel(writer, index=False, sheet_name=\"GCB3 Counts\")\n",
+    "                if not per_gcb4.empty:\n",
+    "                    per_gcb4.to_excel(writer, index=False, sheet_name=\"GCB4 Counts\")\n",
+    "            saved += 1\n",
+    "\n",
+    "        # Single pop-up after all done\n",
+    "        messagebox.showinfo(\"Done\", f\"All slices for GCB Level {level} saved in:\\n{out_folder}\\nFiles created: {saved}\")\n",
+    "\n",
+    "    # ---------------- Generate Slice (single) ----------------\n",
+    "    def generate_slice(self, manager_id, manager_name, out_folder):\n",
     "        sliced_df = get_hierarchy_slice(self.df, manager_id)\n",
-    "        sliced_df = sliced_df[sliced_df['Employee ID'] != manager_id]  # exclude self\n",
-    "\n",
     "        if sliced_df.empty:\n",
-    "            messagebox.showinfo(\"Info\", f\"No employees found under {manager_name}\")\n",
+    "            messagebox.showinfo(\"Info\", f\"No records found under {manager_name}\")\n",
     "            return\n",
     "\n",
-    "        summary, per_gcb3, per_gcb4 = generate_summary(sliced_df, manager_name, manager_id)\n",
+    "        # Summary using helper (nunique counts)\n",
+    "        summary, per_gcb3, per_gcb4 = self.build_summary(sliced_df, manager_name, manager_id)\n",
     "\n",
-    "        file_path = os.path.join(self.output_folder, f\"{manager_name}_{manager_id}_slice.xlsx\")\n",
+    "        # Save Excel\n",
+    "        # sanitize filename\n",
+    "        safe_name = manager_name.replace(\" \", \"_\")\n",
+    "        file_path = os.path.join(out_folder, f\"{safe_name}_{manager_id}_slice.xlsx\")\n",
     "        with pd.ExcelWriter(file_path, engine=\"openpyxl\") as writer:\n",
     "            sliced_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Slice\")\n",
     "            pd.DataFrame(summary).to_excel(writer, index=False, sheet_name=\"Summary\")\n",
@@ -156,43 +219,31 @@
     "            if not per_gcb4.empty:\n",
     "                per_gcb4.to_excel(writer, index=False, sheet_name=\"GCB4 Counts\")\n",
     "\n",
-    "        messagebox.showinfo(\"Done\", f\"Slice for {manager_name} saved at:\\n{file_path}\")\n",
+    "        self.status_var.set(f\"Slice for {manager_name} saved → {file_path}\")\n",
+    "        messagebox.showinfo(\"Success\", f\"Slice for {manager_name} saved successfully!\")\n",
     "\n",
-    "    # ---------------- Slice All at GCB Level ----------------\n",
-    "    def slice_all_at_level(self):\n",
-    "        if self.df is None:\n",
-    "            messagebox.showerror(\"Error\", \"Load Hierarchy Report first!\")\n",
-    "            return\n",
-    "        if not self.output_folder:\n",
-    "            messagebox.showerror(\"Error\", \"Select output folder!\")\n",
-    "            return\n",
+    "    # ---------------- Summary helper ----------------\n",
+    "    def build_summary(self, sliced_df, manager_name, manager_id):\n",
+    "        # ensure GCB numeric for matching\n",
+    "        gcb_numeric = pd.to_numeric(sliced_df['Global Career Band'], errors='coerce')\n",
     "\n",
-    "        level = self.gcb_level_cb.get()\n",
-    "        if not level:\n",
-    "            messagebox.showerror(\"Error\", \"Please select a GCB level\")\n",
-    "            return\n",
-    "        level = int(level)\n",
+    "        total_emp = sliced_df['Employee ID'].nunique()\n",
+    "        total_gcb3 = sliced_df[gcb_numeric == 3]['Employee ID'].nunique()\n",
+    "        total_gcb4 = sliced_df[gcb_numeric == 4]['Employee ID'].nunique()\n",
     "\n",
-    "        managers = self.df[self.df['Global Career Band']==level][['Employee ID','Employee Name']].drop_duplicates()\n",
-    "        for _, row in managers.iterrows():\n",
-    "            mid, mname = str(row['Employee ID']), row['Employee Name']\n",
-    "            sliced_df = get_hierarchy_slice(self.df, mid)\n",
-    "            sliced_df = sliced_df[sliced_df['Employee ID'] != mid]  # exclude self\n",
-    "            if sliced_df.empty:\n",
-    "                continue\n",
-    "            summary, per_gcb3, per_gcb4 = generate_summary(sliced_df, mname, mid)\n",
+    "        summary = [\n",
+    "            {\"Metric\": \"Manager Name\", \"Value\": manager_name},\n",
+    "            {\"Metric\": \"Manager ID\", \"Value\": manager_id},\n",
+    "            {\"Metric\": \"Total Employees (direct+indirect)\", \"Value\": total_emp},\n",
+    "            {\"Metric\": \"Total GCB3 reporting\", \"Value\": total_gcb3},\n",
+    "            {\"Metric\": \"Total GCB4 reporting\", \"Value\": total_gcb4},\n",
+    "        ]\n",
     "\n",
-    "            file_path = os.path.join(self.output_folder, f\"{mname}_{mid}_slice.xlsx\")\n",
-    "            with pd.ExcelWriter(file_path, engine=\"openpyxl\") as writer:\n",
-    "                sliced_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Slice\")\n",
-    "                pd.DataFrame(summary).to_excel(writer, index=False, sheet_name=\"Summary\")\n",
-    "                if not per_gcb3.empty:\n",
-    "                    per_gcb3.to_excel(writer, index=False, sheet_name=\"GCB3 Counts\")\n",
-    "                if not per_gcb4.empty:\n",
-    "                    per_gcb4.to_excel(writer, index=False, sheet_name=\"GCB4 Counts\")\n",
+    "        per_gcb3 = sliced_df[gcb_numeric == 3].groupby('Employee Name')['Employee ID'].nunique().reset_index(name='Count')\n",
+    "        per_gcb4 = sliced_df[gcb_numeric == 4].groupby('Employee Name')['Employee ID'].nunique().reset_index(name='Count')\n",
     "\n",
-    "        # Single pop-up after all done\n",
-    "        messagebox.showinfo(\"Done\", f\"All slices for GCB Level {level} saved in:\\n{self.output_folder}\")\n",
+    "        return summary, per_gcb3, per_gcb4\n",
+    "\n",
     "\n",
     "# -----------------------------\n",
     "# Main\n",
@@ -206,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67c556ea",
+   "id": "4a2f86b2",
    "metadata": {},
    "outputs": [],
    "source": [
