--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b595f2",
+   "id": "098f9586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,13 +53,13 @@
     "\n",
     "    return pd.DataFrame(summary, columns=[\"Description\", \"Count\"])\n",
     "\n",
-    "def generate_slice(input_file, output_dir, manager_name, gcb_level):\n",
+    "def generate_slice(input_file, output_dir, manager_name, gcb_level, suppress_popup=False):\n",
     "    df = pd.read_excel(input_file, sheet_name=\"Hierarchy Report\")\n",
     "\n",
-    "    # 🔹 restrict dropdown options to actual managers only\n",
     "    managers = df[\"Manager Name\"].dropna().unique().tolist()\n",
     "    if manager_name not in managers:\n",
-    "        messagebox.showerror(\"Error\", f\"{manager_name} is not a valid manager.\")\n",
+    "        if not suppress_popup:\n",
+    "            messagebox.showerror(\"Error\", f\"{manager_name} is not a valid manager.\")\n",
     "        return\n",
     "\n",
     "    sliced_df = get_all_reports(df, manager_name)\n",
@@ -76,7 +76,19 @@
     "        sliced_df.to_excel(writer, sheet_name=\"Slice\", index=False)\n",
     "        summary_df.to_excel(writer, sheet_name=\"Summary\", index=False)\n",
     "\n",
-    "    messagebox.showinfo(\"Success\", f\"Report saved to {out_file}\")\n",
+    "    if not suppress_popup:\n",
+    "        messagebox.showinfo(\"Success\", f\"Report saved to {out_file}\")\n",
+    "\n",
+    "def generate_all(input_file, output_dir, gcb_level):\n",
+    "    df = pd.read_excel(input_file, sheet_name=\"Hierarchy Report\")\n",
+    "\n",
+    "    # Only take actual managers at this GCB level\n",
+    "    managers = df.loc[df[\"Global Career Band\"] == gcb_level[-1], \"Entity Manager Employee name\"].dropna().unique().tolist()\n",
+    "\n",
+    "    for m in managers:\n",
+    "        generate_slice(input_file, output_dir, m, gcb_level, suppress_popup=True)\n",
+    "\n",
+    "    messagebox.showinfo(\"Success\", f\"All {gcb_level} slices saved to {output_dir}\")\n",
     "\n",
     "# ---------------- GUI ---------------- #\n",
     "\n",
@@ -84,19 +96,21 @@
     "    filename = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx\")])\n",
     "    input_entry.delete(0, tk.END)\n",
     "    input_entry.insert(0, filename)\n",
+    "    populate_manager_dropdown(filename)\n",
     "\n",
     "def browse_output():\n",
     "    folder = filedialog.askdirectory()\n",
     "    output_entry.delete(0, tk.END)\n",
     "    output_entry.insert(0, folder)\n",
     "\n",
-    "def populate_manager_dropdown(*args):\n",
-    "    input_file = input_entry.get()\n",
+    "def populate_manager_dropdown(input_file):\n",
     "    if not os.path.exists(input_file):\n",
     "        return\n",
     "    df = pd.read_excel(input_file, sheet_name=\"Hierarchy Report\")\n",
     "    managers = sorted(df[\"Manager Name\"].dropna().unique().tolist())\n",
     "    manager_combo[\"values\"] = managers\n",
+    "    if managers:\n",
+    "        manager_combo.current(0)\n",
     "\n",
     "def run_selected():\n",
     "    input_file = input_entry.get()\n",
@@ -109,6 +123,17 @@
     "        return\n",
     "\n",
     "    generate_slice(input_file, output_dir, manager_name, gcb_level)\n",
+    "\n",
+    "def run_all():\n",
+    "    input_file = input_entry.get()\n",
+    "    output_dir = output_entry.get()\n",
+    "    gcb_level = gcb_level_var.get()\n",
+    "\n",
+    "    if not input_file or not output_dir:\n",
+    "        messagebox.showerror(\"Error\", \"Please provide all inputs.\")\n",
+    "        return\n",
+    "\n",
+    "    generate_all(input_file, output_dir, gcb_level)\n",
     "\n",
     "# GUI setup\n",
     "root = tk.Tk()\n",
@@ -132,10 +157,8 @@
     "gcb_level_var = tk.StringVar(value=\"GCB3\")\n",
     "ttk.Combobox(root, textvariable=gcb_level_var, values=[\"GCB3\", \"GCB4\"], width=10).grid(row=3, column=1, sticky=\"w\")\n",
     "\n",
-    "tk.Button(root, text=\"Generate Slice\", command=run_selected).grid(row=4, column=1, pady=10)\n",
-    "\n",
-    "# Populate managers when input is selected\n",
-    "input_entry.bind(\"<FocusOut>\", populate_manager_dropdown)\n",
+    "tk.Button(root, text=\"Generate Slice (Selected Manager)\", command=run_selected).grid(row=4, column=1, pady=5, sticky=\"w\")\n",
+    "tk.Button(root, text=\"Generate All (Selected GCB Level)\", command=run_all).grid(row=4, column=2, pady=5, sticky=\"e\")\n",
     "\n",
     "root.mainloop()\n"
    ]
@@ -143,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89da8ccc",
+   "id": "cbc36d25",
    "metadata": {},
    "outputs": [],
    "source": [
