--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,74 +3,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "098f9586",
+   "id": "0d2b3960",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import tkinter as tk\n",
     "from tkinter import filedialog, messagebox, ttk\n",
-    "import os\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# Helper functions\n",
+    "# -------------------------\n",
     "\n",
     "def get_all_reports(df, manager_name):\n",
-    "    reports = []\n",
-    "    def recurse(manager):\n",
-    "        subordinates = df[df[\"Manager Name\"] == manager]\n",
-    "        for _, row in subordinates.iterrows():\n",
-    "            reports.append(row)\n",
-    "            recurse(row[\"Entity Manager Employee name\"])\n",
-    "    recurse(manager_name)\n",
-    "    return pd.DataFrame(reports)\n",
+    "    \"\"\"Get all reports under a manager recursively\"\"\"\n",
+    "    reports = df[df[\"Manager Name\"] == manager_name].copy()\n",
+    "    all_reports = reports.copy()\n",
     "\n",
-    "def generate_summary(df, manager_name, gcb_level):\n",
-    "    summary = []\n",
-    "    total_reports = len(df)\n",
+    "    for _, row in reports.iterrows():\n",
+    "        sub_reports = get_all_reports(df, row[\"Entity Manager Employee name\"])\n",
+    "        all_reports = pd.concat([all_reports, sub_reports], ignore_index=True)\n",
     "\n",
-    "    summary.append([f\"Manager Name: {manager_name}\", \"\"])\n",
-    "    summary.append([f\"Total reportees (direct + indirect):\", total_reports])\n",
+    "    return all_reports\n",
     "\n",
-    "    if gcb_level == \"GCB3\":\n",
-    "        gcb3s = df[df[\"Global Career Band\"] == \"3\"][\"Entity Manager Employee name\"].unique()\n",
-    "        gcb4s = df[df[\"Global Career Band\"] == \"4\"][\"Entity Manager Employee name\"].unique()\n",
     "\n",
-    "        summary.append([f\"Total GCB3 reporting:\", len(gcb3s)])\n",
-    "        for gcb3 in gcb3s:\n",
-    "            count = len(get_all_reports(df, gcb3))\n",
-    "            summary.append([f\"   {gcb3}\", count])\n",
+    "def generate_summary(sliced_df, manager_name, gcb_level):\n",
+    "    \"\"\"Generate summary dataframe (dummy example)\"\"\"\n",
+    "    summary = (\n",
+    "        sliced_df.groupby(\"Global Career Band\")\n",
+    "        .size()\n",
+    "        .reset_index(name=\"Count\")\n",
+    "    )\n",
+    "    summary[\"Manager\"] = manager_name\n",
+    "    summary[\"Level\"] = gcb_level\n",
+    "    return summary\n",
     "\n",
-    "        summary.append([f\"Total GCB4 reporting:\", len(gcb4s)])\n",
-    "        for gcb4 in gcb4s:\n",
-    "            count = len(get_all_reports(df, gcb4))\n",
-    "            summary.append([f\"   {gcb4}\", count])\n",
-    "\n",
-    "    elif gcb_level == \"GCB4\":\n",
-    "        gcb4s = df[df[\"Global Career Band\"] == \"4\"][\"Entity Manager Employee name\"].unique()\n",
-    "\n",
-    "        summary.append([f\"Total GCB4 reporting:\", len(gcb4s)])\n",
-    "        for gcb4 in gcb4s:\n",
-    "            count = len(get_all_reports(df, gcb4))\n",
-    "            summary.append([f\"   {gcb4}\", count])\n",
-    "\n",
-    "    return pd.DataFrame(summary, columns=[\"Description\", \"Count\"])\n",
     "\n",
     "def generate_slice(input_file, output_dir, manager_name, gcb_level, suppress_popup=False):\n",
     "    df = pd.read_excel(input_file, sheet_name=\"Hierarchy Report\")\n",
     "\n",
-    "    managers = df[\"Manager Name\"].dropna().unique().tolist()\n",
+    "    # Managers list\n",
+    "    managers = df[\"Entity Manager Employee name\"].dropna().unique().tolist()\n",
     "    if manager_name not in managers:\n",
     "        if not suppress_popup:\n",
     "            messagebox.showerror(\"Error\", f\"{manager_name} is not a valid manager.\")\n",
     "        return\n",
     "\n",
-    "    sliced_df = get_all_reports(df, manager_name)\n",
+    "    # Get reports\n",
+    "    sliced_df = get_all_reports(df, manager_name).copy()\n",
+    "    print(f\"{manager_name} → {len(sliced_df)} rows\")  # debug\n",
     "\n",
-    "    # 🔹 Remove the manager’s own record\n",
+    "    # Remove the manager’s own record\n",
     "    sliced_df = sliced_df[sliced_df[\"Entity Manager Employee name\"] != manager_name]\n",
     "\n",
     "    # Summary\n",
     "    summary_df = generate_summary(sliced_df, manager_name, gcb_level)\n",
     "\n",
-    "    # Save to file\n",
+    "    # Save\n",
     "    out_file = os.path.join(output_dir, f\"{manager_name}_slice.xlsx\")\n",
     "    with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
     "        sliced_df.to_excel(writer, sheet_name=\"Slice\", index=False)\n",
@@ -79,94 +70,135 @@
     "    if not suppress_popup:\n",
     "        messagebox.showinfo(\"Success\", f\"Report saved to {out_file}\")\n",
     "\n",
+    "\n",
     "def generate_all(input_file, output_dir, gcb_level):\n",
     "    df = pd.read_excel(input_file, sheet_name=\"Hierarchy Report\")\n",
     "\n",
-    "    # Only take actual managers at this GCB level\n",
-    "    managers = df.loc[df[\"Global Career Band\"] == gcb_level[-1], \"Entity Manager Employee name\"].dropna().unique().tolist()\n",
+    "    managers = df.loc[\n",
+    "        df[\"Global Career Band\"] == gcb_level, \"Entity Manager Employee name\"\n",
+    "    ].dropna().unique().tolist()\n",
+    "\n",
+    "    if not managers:\n",
+    "        messagebox.showwarning(\"Warning\", f\"No managers found for {gcb_level}\")\n",
+    "        return\n",
     "\n",
     "    for m in managers:\n",
     "        generate_slice(input_file, output_dir, m, gcb_level, suppress_popup=True)\n",
     "\n",
     "    messagebox.showinfo(\"Success\", f\"All {gcb_level} slices saved to {output_dir}\")\n",
     "\n",
-    "# ---------------- GUI ---------------- #\n",
     "\n",
-    "def browse_input():\n",
-    "    filename = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx\")])\n",
-    "    input_entry.delete(0, tk.END)\n",
-    "    input_entry.insert(0, filename)\n",
-    "    populate_manager_dropdown(filename)\n",
+    "# -------------------------\n",
+    "# GUI\n",
+    "# -------------------------\n",
     "\n",
-    "def browse_output():\n",
-    "    folder = filedialog.askdirectory()\n",
-    "    output_entry.delete(0, tk.END)\n",
-    "    output_entry.insert(0, folder)\n",
+    "class ReportGUI:\n",
+    "    def __init__(self, root):\n",
+    "        self.root = root\n",
+    "        self.root.title(\"Phase 3 Hierarchy Slicer\")\n",
     "\n",
-    "def populate_manager_dropdown(input_file):\n",
-    "    if not os.path.exists(input_file):\n",
-    "        return\n",
-    "    df = pd.read_excel(input_file, sheet_name=\"Hierarchy Report\")\n",
-    "    managers = sorted(df[\"Manager Name\"].dropna().unique().tolist())\n",
-    "    manager_combo[\"values\"] = managers\n",
-    "    if managers:\n",
-    "        manager_combo.current(0)\n",
+    "        # Vars\n",
+    "        self.input_file = tk.StringVar()\n",
+    "        self.output_dir = tk.StringVar()\n",
+    "        self.manager_name = tk.StringVar()\n",
+    "        self.gcb_level = tk.StringVar()\n",
     "\n",
-    "def run_selected():\n",
-    "    input_file = input_entry.get()\n",
-    "    output_dir = output_entry.get()\n",
-    "    manager_name = manager_combo.get()\n",
-    "    gcb_level = gcb_level_var.get()\n",
+    "        # Layout\n",
+    "        tk.Label(root, text=\"Input Excel File:\").grid(row=0, column=0, sticky=\"w\")\n",
+    "        tk.Entry(root, textvariable=self.input_file, width=50).grid(row=0, column=1)\n",
+    "        tk.Button(root, text=\"Browse\", command=self.browse_input).grid(row=0, column=2)\n",
     "\n",
-    "    if not input_file or not output_dir or not manager_name:\n",
-    "        messagebox.showerror(\"Error\", \"Please provide all inputs.\")\n",
-    "        return\n",
+    "        tk.Label(root, text=\"Output Folder:\").grid(row=1, column=0, sticky=\"w\")\n",
+    "        tk.Entry(root, textvariable=self.output_dir, width=50).grid(row=1, column=1)\n",
+    "        tk.Button(root, text=\"Browse\", command=self.browse_output).grid(row=1, column=2)\n",
     "\n",
-    "    generate_slice(input_file, output_dir, manager_name, gcb_level)\n",
+    "        tk.Label(root, text=\"Manager Name:\").grid(row=2, column=0, sticky=\"w\")\n",
+    "        self.manager_combo = ttk.Combobox(root, textvariable=self.manager_name, width=47)\n",
+    "        self.manager_combo.grid(row=2, column=1, columnspan=2)\n",
     "\n",
-    "def run_all():\n",
-    "    input_file = input_entry.get()\n",
-    "    output_dir = output_entry.get()\n",
-    "    gcb_level = gcb_level_var.get()\n",
+    "        tk.Label(root, text=\"GCB Level:\").grid(row=3, column=0, sticky=\"w\")\n",
+    "        self.gcb_combo = ttk.Combobox(\n",
+    "            root,\n",
+    "            textvariable=self.gcb_level,\n",
+    "            values=[\"MD\", \"GCB3\", \"GCB4\", \"GCB5\", \"GCB6\", \"GCB7\", \"GCB8\"],\n",
+    "            width=20,\n",
+    "        )\n",
+    "        self.gcb_combo.grid(row=3, column=1, sticky=\"w\")\n",
     "\n",
-    "    if not input_file or not output_dir:\n",
-    "        messagebox.showerror(\"Error\", \"Please provide all inputs.\")\n",
-    "        return\n",
+    "        # Buttons\n",
+    "        tk.Button(\n",
+    "            root, text=\"Generate Slice (Selected Manager)\", command=self.run_slice\n",
+    "        ).grid(row=4, column=0, pady=10)\n",
     "\n",
-    "    generate_all(input_file, output_dir, gcb_level)\n",
+    "        tk.Button(\n",
+    "            root, text=\"Generate All (Selected GCB Level)\", command=self.run_all\n",
+    "        ).grid(row=4, column=1, pady=10)\n",
     "\n",
-    "# GUI setup\n",
-    "root = tk.Tk()\n",
-    "root.title(\"Phase 3 - Hierarchy Report Slicer\")\n",
+    "    def browse_input(self):\n",
+    "        file = filedialog.askopenfilename(\n",
+    "            filetypes=[(\"Excel Files\", \"*.xlsx *.xls\")])\n",
+    "        if file:\n",
+    "            self.input_file.set(file)\n",
+    "            # Load managers into combobox\n",
+    "            try:\n",
+    "                df = pd.read_excel(file, sheet_name=\"Hierarchy Report\")\n",
+    "                managers = df[\"Entity Manager Employee name\"].dropna().unique().tolist()\n",
+    "                self.manager_combo[\"values\"] = sorted(managers)\n",
+    "            except Exception as e:\n",
+    "                messagebox.showerror(\"Error\", f\"Could not load managers: {e}\")\n",
     "\n",
-    "tk.Label(root, text=\"Input File:\").grid(row=0, column=0, sticky=\"e\")\n",
-    "input_entry = tk.Entry(root, width=50)\n",
-    "input_entry.grid(row=0, column=1)\n",
-    "tk.Button(root, text=\"Browse\", command=browse_input).grid(row=0, column=2)\n",
+    "    def browse_output(self):\n",
+    "        folder = filedialog.askdirectory()\n",
+    "        if folder:\n",
+    "            self.output_dir.set(folder)\n",
     "\n",
-    "tk.Label(root, text=\"Output Folder:\").grid(row=1, column=0, sticky=\"e\")\n",
-    "output_entry = tk.Entry(root, width=50)\n",
-    "output_entry.grid(row=1, column=1)\n",
-    "tk.Button(root, text=\"Browse\", command=browse_output).grid(row=1, column=2)\n",
+    "    def run_slice(self):\n",
+    "        if not self.input_file.get() or not self.output_dir.get():\n",
+    "            messagebox.showerror(\"Error\", \"Please select input file and output folder\")\n",
+    "            return\n",
+    "        if not self.manager_name.get():\n",
+    "            messagebox.showerror(\"Error\", \"Please select a manager name\")\n",
+    "            return\n",
+    "        if not self.gcb_level.get():\n",
+    "            messagebox.showerror(\"Error\", \"Please select a GCB level\")\n",
+    "            return\n",
     "\n",
-    "tk.Label(root, text=\"Select Manager Name:\").grid(row=2, column=0, sticky=\"e\")\n",
-    "manager_combo = ttk.Combobox(root, width=47)\n",
-    "manager_combo.grid(row=2, column=1, columnspan=2)\n",
+    "        generate_slice(\n",
+    "            self.input_file.get(),\n",
+    "            self.output_dir.get(),\n",
+    "            self.manager_name.get(),\n",
+    "            self.gcb_level.get(),\n",
+    "        )\n",
     "\n",
-    "tk.Label(root, text=\"Split Level:\").grid(row=3, column=0, sticky=\"e\")\n",
-    "gcb_level_var = tk.StringVar(value=\"GCB3\")\n",
-    "ttk.Combobox(root, textvariable=gcb_level_var, values=[\"GCB3\", \"GCB4\"], width=10).grid(row=3, column=1, sticky=\"w\")\n",
+    "    def run_all(self):\n",
+    "        if not self.input_file.get() or not self.output_dir.get():\n",
+    "            messagebox.showerror(\"Error\", \"Please select input file and output folder\")\n",
+    "            return\n",
+    "        if not self.gcb_level.get():\n",
+    "            messagebox.showerror(\"Error\", \"Please select a GCB level\")\n",
+    "            return\n",
     "\n",
-    "tk.Button(root, text=\"Generate Slice (Selected Manager)\", command=run_selected).grid(row=4, column=1, pady=5, sticky=\"w\")\n",
-    "tk.Button(root, text=\"Generate All (Selected GCB Level)\", command=run_all).grid(row=4, column=2, pady=5, sticky=\"e\")\n",
+    "        generate_all(\n",
+    "            self.input_file.get(),\n",
+    "            self.output_dir.get(),\n",
+    "            self.gcb_level.get(),\n",
+    "        )\n",
     "\n",
-    "root.mainloop()\n"
+    "\n",
+    "# -------------------------\n",
+    "# Run\n",
+    "# -------------------------\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    root = tk.Tk()\n",
+    "    app = ReportGUI(root)\n",
+    "    root.mainloop()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc36d25",
+   "id": "af1cffc7",
    "metadata": {},
    "outputs": [],
    "source": [
