--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,244 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d2b3960",
+   "id": "17d04bd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, messagebox, ttk\n",
+    "import os\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Recursive slicing function\n",
+    "# -----------------------------\n",
+    "def get_hierarchy_slice(df, manager_id):\n",
+    "    \"\"\"Return all employees (direct/indirect) under manager_id in order.\n",
+    "       Manager's own record is NOT included.\n",
+    "    \"\"\"\n",
+    "    result = []\n",
+    "    visited = set()\n",
+    "\n",
+    "    mid_str = str(manager_id).strip()\n",
+    "\n",
+    "    def recurse(mid):\n",
+    "        reports = df[df['Entity Manager Employee ID'].astype(str).str.strip() == str(mid).strip()]\n",
+    "        for _, r in reports.iterrows():\n",
+    "            eid = str(r['Employee ID']).strip()\n",
+    "            if eid not in visited:\n",
+    "                visited.add(eid)\n",
+    "                result.append(r.to_dict())\n",
+    "                recurse(eid)\n",
+    "\n",
+    "    recurse(mid_str)\n",
+    "    return pd.DataFrame(result)\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# GUI Application\n",
+    "# -----------------------------\n",
+    "class Phase3GUI:\n",
+    "    def __init__(self, master):\n",
+    "        self.master = master\n",
+    "        master.title(\"Phase 3: Hierarchy Slice Utility\")\n",
+    "        master.geometry(\"700x400\")\n",
+    "\n",
+    "        self.df = None\n",
+    "        self.name_to_ids = {}\n",
+    "        self.output_folder = \"\"\n",
+    "\n",
+    "        # ---------------- Input File ----------------\n",
+    "        tk.Label(master, text=\"Hierarchy Report File:\").grid(row=0, column=0, sticky=\"w\", padx=10, pady=5)\n",
+    "        self.input_file_var = tk.StringVar()\n",
+    "        tk.Entry(master, textvariable=self.input_file_var, width=50).grid(row=0, column=1, padx=5)\n",
+    "        tk.Button(master, text=\"Browse\", command=self.browse_input_file).grid(row=0, column=2, padx=5)\n",
+    "\n",
+    "        # ---------------- Output Folder ----------------\n",
+    "        tk.Label(master, text=\"Output Folder:\").grid(row=1, column=0, sticky=\"w\", padx=10, pady=5)\n",
+    "        self.output_folder_var = tk.StringVar()\n",
+    "        tk.Entry(master, textvariable=self.output_folder_var, width=50).grid(row=1, column=1, padx=5)\n",
+    "        tk.Button(master, text=\"Browse\", command=self.browse_output_folder).grid(row=1, column=2, padx=5)\n",
+    "\n",
+    "        # ---------------- Manager Selection ----------------\n",
+    "        tk.Label(master, text=\"Select Manager Name:\").grid(row=2, column=0, sticky=\"w\", padx=10, pady=5)\n",
+    "        self.manager_cb = ttk.Combobox(master, width=47, state=\"readonly\")\n",
+    "        self.manager_cb.grid(row=2, column=1, padx=5)\n",
+    "        tk.Button(master, text=\"Load Managers\", command=self.load_managers).grid(row=2, column=2, padx=5)\n",
+    "\n",
+    "        # ---------------- GCB Level Selection ----------------\n",
+    "        tk.Label(master, text=\"Select GCB Level (for Generate All):\").grid(row=3, column=0, sticky=\"w\", padx=10, pady=5)\n",
+    "        self.gcb_level_cb = ttk.Combobox(master, values=[3,4,5,6,7,8], width=10, state=\"readonly\")\n",
+    "        self.gcb_level_cb.grid(row=3, column=1, sticky=\"w\", padx=5)\n",
+    "\n",
+    "        # ---------------- Buttons ----------------\n",
+    "        tk.Button(master, text=\"Generate Slice for Selected Manager\", command=self.slice_selected_manager).grid(row=4, column=0, columnspan=2, pady=10)\n",
+    "        tk.Button(master, text=\"Generate Slices for All at GCB Level\", command=self.slice_all_at_level).grid(row=5, column=0, columnspan=2, pady=10)\n",
+    "\n",
+    "        # ---------------- Status ----------------\n",
+    "        self.status_var = tk.StringVar()\n",
+    "        tk.Label(master, textvariable=self.status_var, fg=\"blue\").grid(row=6, column=0, columnspan=3, pady=10)\n",
+    "\n",
+    "\n",
+    "    # ---------------- Browse Functions ----------------\n",
+    "    def browse_input_file(self):\n",
+    "        filename = filedialog.askopenfilename(filetypes=[(\"Excel files\",\"*.xlsx\")])\n",
+    "        if filename:\n",
+    "            self.input_file_var.set(filename)\n",
+    "\n",
+    "    def browse_output_folder(self):\n",
+    "        folder = filedialog.askdirectory()\n",
+    "        if folder:\n",
+    "            self.output_folder_var.set(folder)\n",
+    "            self.output_folder = folder\n",
+    "\n",
+    "    # ---------------- Load Manager Names ----------------\n",
+    "    def load_managers(self):\n",
+    "        file = self.input_file_var.get()\n",
+    "        if not file or not os.path.exists(file):\n",
+    "            messagebox.showerror(\"Error\", \"Please select a valid Hierarchy Report file\")\n",
+    "            return\n",
+    "\n",
+    "        self.df = pd.read_excel(file, sheet_name=\"Hierarchy Report\")\n",
+    "        self.df.columns = self.df.columns.str.strip()\n",
+    "\n",
+    "        # Normalize ID columns\n",
+    "        if 'Employee ID' in self.df.columns:\n",
+    "            self.df['Employee ID'] = self.df['Employee ID'].astype(str).str.strip()\n",
+    "        if 'Entity Manager Employee ID' in self.df.columns:\n",
+    "            self.df['Entity Manager Employee ID'] = self.df['Entity Manager Employee ID'].astype(str).str.strip()\n",
+    "        if 'Global Career Band' in self.df.columns:\n",
+    "            self.df['Global Career Band'] = self.df['Global Career Band'].astype(str).str.strip()\n",
+    "\n",
+    "        # ✅ Only names from \"Manager Name\" column\n",
+    "        managers = sorted(self.df['Manager Name'].dropna().unique().tolist())\n",
+    "        self.manager_cb['values'] = managers\n",
+    "\n",
+    "        # Create name→IDs map (still needed internally)\n",
+    "        self.name_to_ids = self.df.groupby('Employee Name')['Employee ID'].apply(lambda s: list(dict.fromkeys(s))).to_dict()\n",
+    "        self.status_var.set(f\"Loaded {len(managers)} managers.\")\n",
+    "\n",
+    "\n",
+    "    # ---------------- Slice Selected Manager ----------------\n",
+    "    def slice_selected_manager(self):\n",
+    "        name = self.manager_cb.get()\n",
+    "        out_folder = self.output_folder_var.get()\n",
+    "        if not name:\n",
+    "            messagebox.showerror(\"Error\", \"Please select a manager name\")\n",
+    "            return\n",
+    "        if not out_folder:\n",
+    "            messagebox.showerror(\"Error\", \"Please select output folder\")\n",
+    "            return\n",
+    "\n",
+    "        ids = self.name_to_ids.get(name, [])\n",
+    "        if len(ids) > 1:\n",
+    "            id_select_win = tk.Toplevel(self.master)\n",
+    "            id_select_win.title(f\"Select Manager ID for {name}\")\n",
+    "            tk.Label(id_select_win, text=f\"Select Manager ID for {name}:\").pack(pady=5)\n",
+    "            selected_id_var = tk.StringVar()\n",
+    "            cb = ttk.Combobox(id_select_win, values=ids, textvariable=selected_id_var, state=\"readonly\")\n",
+    "            cb.pack(pady=5)\n",
+    "            def confirm_id():\n",
+    "                manager_id = selected_id_var.get()\n",
+    "                if manager_id:\n",
+    "                    self.generate_slice(manager_id, name, out_folder)\n",
+    "                    id_select_win.destroy()\n",
+    "            tk.Button(id_select_win, text=\"Confirm\", command=confirm_id).pack(pady=5)\n",
+    "            return\n",
+    "        elif len(ids) == 0:\n",
+    "            messagebox.showerror(\"Error\", f\"No manager ID found for {name}\")\n",
+    "            return\n",
+    "        else:\n",
+    "            manager_id = ids[0]\n",
+    "            self.generate_slice(manager_id, name, out_folder)\n",
+    "\n",
+    "    # ---------------- Slice All at GCB Level ----------------\n",
+    "    def slice_all_at_level(self):\n",
+    "        level = self.gcb_level_cb.get()\n",
+    "        out_folder = self.output_folder_var.get()\n",
+    "        if not level:\n",
+    "            messagebox.showerror(\"Error\", \"Please select a GCB level\")\n",
+    "            return\n",
+    "        if not out_folder:\n",
+    "            messagebox.showerror(\"Error\", \"Please select output folder\")\n",
+    "            return\n",
+    "        level = int(level)\n",
+    "        gcb_numeric = pd.to_numeric(self.df['Global Career Band'], errors='coerce')\n",
+    "        managers = self.df[gcb_numeric == level][['Employee ID','Employee Name']].drop_duplicates()\n",
+    "\n",
+    "        saved = 0\n",
+    "        for _, row in managers.iterrows():\n",
+    "            mid = str(row['Employee ID'])\n",
+    "            mname = row['Employee Name']\n",
+    "            sliced_df = get_hierarchy_slice(self.df, mid)\n",
+    "            if sliced_df.empty:\n",
+    "                continue\n",
+    "            summary = self.build_summary(sliced_df, mname, mid, level)\n",
+    "\n",
+    "            file_path = os.path.join(out_folder, f\"{mname}_{mid}_slice.xlsx\")\n",
+    "            with pd.ExcelWriter(file_path, engine=\"openpyxl\") as writer:\n",
+    "                sliced_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Slice\")\n",
+    "                pd.DataFrame(summary).to_excel(writer, index=False, sheet_name=\"Summary\")\n",
+    "            saved += 1\n",
+    "\n",
+    "        messagebox.showinfo(\"Done\", f\"All slices for GCB Level {level} saved in:\\n{out_folder}\\nFiles created: {saved}\")\n",
+    "\n",
+    "    # ---------------- Generate Slice (single) ----------------\n",
+    "    def generate_slice(self, manager_id, manager_name, out_folder):\n",
+    "        sliced_df = get_hierarchy_slice(self.df, manager_id)\n",
+    "        if sliced_df.empty:\n",
+    "            messagebox.showinfo(\"Info\", f\"No records found under {manager_name}\")\n",
+    "            return\n",
+    "\n",
+    "        gcb_level = self.gcb_level_cb.get()\n",
+    "        gcb_level = int(gcb_level) if gcb_level else None\n",
+    "        summary = self.build_summary(sliced_df, manager_name, manager_id, gcb_level)\n",
+    "\n",
+    "        safe_name = manager_name.replace(\" \", \"_\")\n",
+    "        file_path = os.path.join(out_folder, f\"{safe_name}_{manager_id}_slice.xlsx\")\n",
+    "        with pd.ExcelWriter(file_path, engine=\"openpyxl\") as writer:\n",
+    "            sliced_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Slice\")\n",
+    "            pd.DataFrame(summary).to_excel(writer, index=False, sheet_name=\"Summary\")\n",
+    "\n",
+    "        self.status_var.set(f\"Slice for {manager_name} saved → {file_path}\")\n",
+    "        messagebox.showinfo(\"Success\", f\"Slice for {manager_name} saved successfully!\")\n",
+    "\n",
+    "    # ---------------- Summary helper ----------------\n",
+    "    def build_summary(self, sliced_df, manager_name, manager_id, gcb_level):\n",
+    "        gcb_numeric = pd.to_numeric(sliced_df['Global Career Band'], errors='coerce')\n",
+    "\n",
+    "        total_emp = sliced_df['Employee ID'].nunique()\n",
+    "        total_gcb3 = sliced_df[gcb_numeric == 3]['Employee ID'].nunique()\n",
+    "        total_gcb4 = sliced_df[gcb_numeric == 4]['Employee ID'].nunique()\n",
+    "\n",
+    "        summary = [\n",
+    "            {\"Metric\": \"Manager Name\", \"Value\": manager_name},\n",
+    "            {\"Metric\": \"Manager ID\", \"Value\": manager_id},\n",
+    "            {\"Metric\": \"Total Employees (direct+indirect)\", \"Value\": total_emp},\n",
+    "        ]\n",
+    "\n",
+    "        # ✅ Logic fix: show only relevant counts\n",
+    "        if gcb_level == 3:\n",
+    "            summary.append({\"Metric\": \"Total GCB4 reporting\", \"Value\": total_gcb4})\n",
+    "        elif gcb_level == 4:\n",
+    "            summary.append({\"Metric\": \"Direct Employees under GCB4\", \"Value\": total_emp})\n",
+    "\n",
+    "        return summary\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Main\n",
+    "# -----------------------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    root = tk.Tk()\n",
+    "    app = Phase3GUI(root)\n",
+    "    root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eebddb7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1cffc7",
+   "id": "b4c6db4c",
    "metadata": {},
    "outputs": [],
    "source": [
