--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d04bd1",
+   "id": "a7b443d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def generate_phase2_summary_df(monthly_df, hierarchy_df, missing_df):\n",
+    "    summary_data = []\n",
+    "\n",
+    "    # 1. Total Employees in Monthly.csv\n",
+    "    total_headcount = len(monthly_df)\n",
+    "    summary_data.append({\"Metric\": \"Total Headcount\", \"Value\": total_headcount})\n",
+    "\n",
+    "    # 2. Missing records in GHA\n",
+    "    missing_count = len(missing_df)\n",
+    "    summary_data.append({\n",
+    "        \"Metric\": \"Total Records with Missing Information\",\n",
+    "        \"Value\": missing_count\n",
+    "    })\n",
+    "\n",
+    "    # 3. Total in Hierarchy sheet\n",
+    "    total_available = len(hierarchy_df)\n",
+    "    summary_data.append({\"Metric\": \"Total Available Headcount\", \"Value\": total_available})\n",
+    "\n",
+    "    # 4–8. Total per BF Level 1–5\n",
+    "    for level in range(1, 6):\n",
+    "        col_name = f\"BF Level {level}\"\n",
+    "        if col_name in hierarchy_df.columns:\n",
+    "            counts = hierarchy_df[col_name].value_counts()\n",
+    "            for k, v in counts.items():\n",
+    "                summary_data.append({\n",
+    "                    \"Metric\": f\"Total Headcount for {col_name} = {k}\",\n",
+    "                    \"Value\": v\n",
+    "                })\n",
+    "\n",
+    "    # 9. Finance except Poland\n",
+    "    if \"Work Location Country/Territory Name\" in hierarchy_df.columns:\n",
+    "        poland_count = (hierarchy_df[\"Work Location Country/Territory Name\"] == \"Poland\").sum()\n",
+    "        finance_except_poland = total_available - poland_count\n",
+    "        summary_data.append({\n",
+    "            \"Metric\": \"Total Headcount for Finance except Poland\",\n",
+    "            \"Value\": finance_except_poland\n",
+    "        })\n",
+    "\n",
+    "    # 10. MD count\n",
+    "    if \"Global Career Band\" in hierarchy_df.columns:\n",
+    "        md_count = (hierarchy_df[\"Global Career Band\"] == \"MD\").sum()\n",
+    "        summary_data.append({\"Metric\": \"Total Number of MDs\", \"Value\": md_count})\n",
+    "\n",
+    "        # 11. GCB 3 count\n",
+    "        gcb3_count = (hierarchy_df[\"Global Career Band\"] == \"3\").sum()\n",
+    "        summary_data.append({\"Metric\": \"Total Number of GCB 3s\", \"Value\": gcb3_count})\n",
+    "\n",
+    "    # Final DF\n",
+    "    summary_df = pd.DataFrame(summary_data)\n",
+    "    return summary_df\n",
+    "\n",
+    "\n",
+    "\n",
+    "summary_df = generate_phase2_summary_df(monthly_df, hierarchy_df, missing_df)\n",
+    "with pd.ExcelWriter(\"phase2_output.xlsx\", engine=\"openpyxl\") as writer:\n",
+    "    hierarchy_df.to_excel(writer, sheet_name=\"Hierarchy Report\", index=False)\n",
+    "    missing_df.to_excel(writer, sheet_name=\"Missing Managers\", index=False)\n",
+    "    summary_df.to_excel(writer, sheet_name=\"Summary\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c3ecaad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eebddb7b",
+   "id": "275d88ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c6db4c",
+   "id": "84c4d3f0",
    "metadata": {},
    "outputs": [],
    "source": [
